<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">CorinLicense</string>
    <string name="savings">Savings</string>
    <string name="spent_today">Spent Today</string>
    <string name="balance">Balance</string>
    <string name="add">Add</string>
    <string name="withdraw">Withdraw</string>
    <string name="setup_image">Setup Image</string>
    <string name="details">Details</string>
    <string name="_0_">0</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="language">Language</string>
    <string name="time">Time</string>
    <string name="currency">Currency</string>
    <string name="nickname">Nickname</string>
    <string name="choose_language">Choose Language</string>
    <string name="overview">Overview</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="save">Save</string>
    <string name="error_capture">Image capture failed</string>
    <string name="error_processing">Error on Processing Image</string>
    <string name="insert_amount">Introducing amount</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
<!--    <string name="enter_valid_amount">Please enter a valid amount</string> -->
    <string name="uploaded">Photo has been uploaded</string>
    <string name="delete">Delete</string>
    <string name="free_data">Free Data</string>
    <string name="transaction_history">Transaction History</string>
    <string name="close">Close\n</string>
    <string name="data">Data</string>

</resources>