<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <TextView
        android:id="@+id/textViewBalanceCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance" />

    <TextView
        android:id="@+id/textViewSpentTodayCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spent_today" />

    <TextView
        android:id="@+id/textViewSavingsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savings" />
</LinearLayout>
