<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPink" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="348dp"
        android:layout_height="358dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="350dp"
        android:elevation="8dp"
        app:cardCornerRadius="25dp"
        android:contentDescription="@string/details"
        android:background="@drawable/gradient_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/missAvatarView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:contentDescription="@string/setup_image"
                android:focusable="true"
                android:src="@drawable/missing_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/missNicknameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/roboto_medium"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:textColor="@color/blueText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missAvatarView"
                app:layout_constraintVertical_bias="0.01" />

            <TextView
                android:id="@+id/SavingsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/_0_"
                android:textColor="@color/blueText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BalanceCount" />

            <TextView
                android:id="@+id/SpentView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/spent_today"
                android:textColor="@color/blueText"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/Savings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balanceView" />

            <TextView
                android:id="@+id/Savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/savings"
                android:textColor="@color/blueText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balanceView" />

            <TextView
                android:id="@+id/balanceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/balance"
                android:textColor="@color/blueText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missNicknameView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/BalanceCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/_0_"
                android:textColor="@color/blueText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missNicknameView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/spentTodayCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/_0_"
                android:textColor="@color/blueText"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/SavingsCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BalanceCount" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/line"

                app:layout_constraintBottom_toTopOf="@+id/SpentView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balanceView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/line"
                app:layout_constraintBottom_toTopOf="@+id/Savings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SpentView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/overviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toTopOf="@id/addBtnContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="64dp"
        />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dd_mm_yyyy"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toTopOf="@id/addBtnContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="64dp"/>

    <LinearLayout
        android:id="@+id/addBtnContainer"
        android:layout_width="348dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_transparent"
            android:contentDescription="@string/add"
            android:src="@drawable/arrow_up"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/WithdrawContainer"
        android:layout_width="348dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/SavingsBtnContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBtnContainer">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_transparent"
            android:contentDescription="@string/withdraw"
            android:src="@drawable/arrow_down"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/withdraw"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SavingsBtnContainer"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WithdrawContainer">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gradient_transparent"
            android:contentDescription="@string/savings"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/piggy_bank" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/savings"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>